# genome-nexus-vep-rust

./: Cargo.toml  README.md
configuration/: dev.yaml
scripts/: init_vep.sh  vep.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: hgvs.rs  mod.rs
